--- a/style/base/_base.scss
+++ b/style/base/_base.scss
@@ -38,3 +38,12 @@ a {
 body {
   background-color: $backgroundPage;
 }
+
+.sr-only {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
