--- a/style/abstracts/_variables.scss
+++ b/style/abstracts/_variables.scss
@@ -11,7 +11,7 @@ $cadmiumOrange: #E28625;
 $skobeloff: #006971;
 $richBlack: #004140;
 
-$backgroundPage: white;
+$backgroundPage: #f2f2f2;
 
 ///breakpoint
 $breakpoint-desktop-min: 768px;
